feat: implement registration button blocking and fix PostgreSQL query issues